--- a/frontend/src/styles/Home.css
+++ b/frontend/src/styles/Home.css
@@ -149,3 +149,16 @@
 .view-all-link:hover {
     text-decoration: underline;
 }
+
+
+/* === LEADERS LIST === */
+.leader-list {
+    list-style: none;
+    padding: 0;
+    margin: 0.5rem 0 0;
+    text-align: left;
+}
+
+.leader-list li {
+    font-size: 0.95rem;
+}
